# rust_sandbox

./: .gitattributes  README.md
custom_paintable/: Cargo.toml
custom_paintable/src/: main.rs
custom_paintable/src/custom_paintable/: imp.rs  mod.rs
display_video/: Cargo.toml
display_video/src/: main.rs
download_image/: Cargo.toml
face_detector/: Cargo.toml
face_detector/src/: classifier.rs  face_detector.rs  main.rs
face_detector/src/face_detector/: face_detector.rs
game_of_life/: Cargo.toml
game_of_life/src/: main.rs
mtcnn/: Cargo.toml
mtcnn/src/: main.rs  mtcnn.pb
retained_image/: Cargo.toml
retained_image/src/: main.rs
video-processing/: Cargo.toml
video-processing/data/mobilenetv3/: imagenet_class_index.json  saved_model.pb
video-processing/data/mobilenetv3/variables/: variables.data-00000-of-00001  variables.index
video-processing/research/tools/mobilenetv3/: create_model.py
video-processing/src/: image_classification.rs  image_processing.rs  main.rs  ui.rs
