[package]
name = "display_video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
gtk = { version = "0.4", package = "gtk4" }
relm4 = { version = "0.4", features = ["macros"] }
relm4-components = "0.4"
opencv = { version = "0.63", default-features = false, features = ["imgproc", "videoio"]}