[package]
name = "retained_image"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"
publish = false


[dependencies]
eframe = "0.18"
egui_extras = { version = "0.18", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png"] }
opencv = "0.63"