[package]
name = "video-processing"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.4", package = "gtk4" }
opencv = { version = "0.63", default-features = false, features = ["imgproc", "videoio"]}
tensorflow = { version = "0.18", features = ["eager"] }
serde_json = "1.0"
lazy_static = "1.1"
rayon = "1.5"

[dev-dependencies]
rand = "0.8.5"
